fixing margin bottom on mobile

--- a/src/css/main.sass
+++ b/src/css/main.sass
@@ -54,5 +54,5 @@ body
     @include media-breakpoint-down(md)
         background-position: center right
         div.container
-            margin-bottom: 5rem
+            margin-bottom: 6rem
             max-width: 75vw
